Enable editing organization plan admin organizations in PersonAdmin

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-09 15:24+0200\n"
+"POT-Creation-Date: 2022-05-09 16:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2293,12 +2293,16 @@ msgid "Person with this email already exists"
 msgstr "Person mit dieser E-Mail-Adresse existiert bereits"
 
 #: people/wagtail_admin.py
-msgid "last login"
-msgstr "letzte Anmeldung"
-
-#: people/wagtail_admin.py
 msgid "is plan admin"
 msgstr "ist Plan-Admin"
+
+#: people/wagtail_admin.py
+msgid "plan admin organizations"
+msgstr "Plan-Admin-Organisationen"
+
+#: people/wagtail_admin.py
+msgid "last login"
+msgstr "letzte Anmeldung"
 
 #: people/wagtail_admin.py
 msgid "contact for indicators"
